--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,9 @@ li{list-style:none}
 /* ---- base ---- */
 
 html,body{ 
-	width:100%;
-	height:100%;
-	background:#111;
+  width:100%;
+  height:100%;
+  background:#111;
 }
 
 html{
@@ -233,5 +233,14 @@ body {
 
   color: white;
   text-shadow: 0px 0px 20px #0db7ed;
+
+}
+
+img {
+
+  width: 200px;
+  height: 200px;
+  filter: brightness(0) invert(1);
+  margin-bottom: 70px;
 
 }
