--- a/css/style.css
+++ b/css/style.css
@@ -238,6 +238,53 @@ body {
 
 svg {
 
+  width: 200px;
+  height: 200px; 
   margin-bottom: 70px;
+
+}
+
+@media screen and (max-width: 600px) {
+
+  svg {
+
+    width: 100px;
+    height: 100px;
+    margin-bottom: 50px;
+
+  }
+
+  .about-me {
+
+    margin-bottom: 60px;
+
+  }
+
+  .about-me h1 {
+
+    font-size: 20px;
+    letter-spacing: 7px;
+
+  }
+
+  .about-me h3 {
+
+    margin-top: 10px;
+    font-size: 8px;
+    letter-spacing: 5px;
+
+  }
+
+  .item-holder {
+
+    margin-top: 0px;
+
+  }
+
+  .fs-50, .fs-60 {
+
+    font-size: 40px;
+
+  }
 
 }
