--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body, html {
     font-style: normal;
     letter-spacing: 1px;
     margin: 0;
-    padding: 0;
+    padding: 0px !important;
     color: white !important;
     box-sizing: border-box;
     background-color: #f4f4f4;
@@ -112,8 +112,30 @@ header {
     100% { -webkit-transform: translateY(0.4em); opacity: 0.9 }
 }
 
-.teste {
-    height: 900px;
-    width: 100%;
-    background-color: #333333;
+.btn-primary {
+    border-radius: 0px !important;
+    background-color: black !important;
+    border: 3px solid #3dfc03 !important;
+    color: white !important;
+
+    font-family: "VT323", monospace;
+    font-size: 30px !important;
+    letter-spacing: 1px;
+    transition: 0s !important;
+    box-shadow: none !important;
+}
+
+.btn-primary:hover {
+    background-color: #3dfc03 !important;
+    color: black !important;
+    border: 3px solid #3dfc03 !important;
+}
+
+
+a {
+    font-family: "VT323", monospace;
+    font-size: 1.3rem !important;
+    letter-spacing: 1px;
+    color: #3dfc03 !important;
+    text-decoration: none; /* no underline */
 }
